feat: frames, dynamic handles, and cleanup